--- a/REghZyNBTEditor/NBT/Controls/NBTStringControl.xaml
+++ b/REghZyNBTEditor/NBT/Controls/NBTStringControl.xaml
@@ -1,21 +1,17 @@
-﻿<UserControl x:Class="REghZyNBTEditor.NBT.Controls.NBTPrimitiveControl"
+﻿<UserControl x:Class="REghZyNBTEditor.NBT.Controls.NBTStringControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:REghZyNBTEditor.NBT.Controls"
-             xmlns:converters="clr-namespace:REghZyNBTEditor.Converters" 
-             xmlns:viewmodels="clr-namespace:REghZyNBTEditor.ViewModels" 
-             xmlns:nbtvm="clr-namespace:REghZyNBTEditor.NBT" 
-             d:DataContext="{d:DesignInstance Type=nbtvm:NBTBaseViewModel}"
+             xmlns:local="clr-namespace:REghZyNBTEditor.NBT.Controls" 
+             xmlns:nbt="clr-namespace:REghZyNBTEditor.NBT" 
+             d:DataContext="{d:DesignInstance Type=nbt:NBTTagStringViewModel}"
              mc:Ignorable="d" 
-             d:DesignWidth="200"
-             HorizontalContentAlignment="Stretch"
-             HorizontalAlignment="Stretch">
+             d:DesignWidth="200">
     <StackPanel>
         <local:NBTHeaderControl DataContext="{Binding}"/>
         <TextBlock Padding="1" HorizontalAlignment="Left" VerticalAlignment="Center" 
                    Text="{Binding Value, UpdateSourceTrigger=PropertyChanged, FallbackValue=NO_NAME}" 
-                   FontFamily="Consolas"/>
+                   FontStyle="Italic" FontFamily="Consolas"/>
     </StackPanel>
 </UserControl>
